feat: adding bigquery first implemention

--- a/dbt_deathmetal/dbt_project.yml
+++ b/dbt_deathmetal/dbt_project.yml
@@ -1,15 +1,48 @@
-# Name your project! Project names should contain only lowercase characters
-# and underscores. A good package name should reflect your organization's
-# name or the intended use of these models
-name: 'dbt_deathmetal'
+## Name your project! Project names should contain only lowercase characters
+## and underscores. A good package name should reflect your organization's
+## name or the intended use of these models
+#name: 'dbt_deathmetal'
+#version: '1.0.0'
+#
+## This setting configures which "profile" dbt uses for this project.
+#profile: 'dbt_deathmetal'
+#
+## These configurations specify where dbt should look for different types of files.
+## The `model-paths` config, for example, states that models in this project can be
+## found in the "models/" directory. You probably won't need to change these!
+#model-paths: [ "models" ]
+#analysis-paths: [ "analyses" ]
+#test-paths: [ "tests" ]
+#seed-paths: [ "seeds" ]
+#macro-paths: [ "macros" ]
+#snapshot-paths: [ "snapshots" ]
+#
+#clean-targets: # directories to be removed by `dbt clean`
+#  - "target"
+#  - "dbt_packages"
+#
+#
+## Configuring models
+## Full documentation: https://docs.getdbt.com/docs/configuring-models
+#
+## In this example config, we tell dbt to build all models in the example/
+## directory as views. These settings can be overridden in the individual model
+## files using the `{{ config(...) }}` macro.
+#models:
+#  dbt_deathmetal:
+#    staging:
+#      +materialized: table
+#    intermediate:
+#      +materialized: table
+#    marts:
+#      +materialized: view
+
+
+name: 'dbt_deathmetal_bigquery'
 version: '1.0.0'
 
-# This setting configures which "profile" dbt uses for this project.
-profile: 'dbt_deathmetal'
+profile: 'dbt_deathmetal_bq'
 
-# These configurations specify where dbt should look for different types of files.
-# The `model-paths` config, for example, states that models in this project can be
-# found in the "models/" directory. You probably won't need to change these!
 model-paths: [ "models" ]
 analysis-paths: [ "analyses" ]
 test-paths: [ "tests" ]
@@ -17,23 +50,36 @@ seed-paths: [ "seeds" ]
 macro-paths: [ "macros" ]
 snapshot-paths: [ "snapshots" ]
 
-clean-targets: # directories to be removed by `dbt clean`
+clean-targets:
   - "target"
   - "dbt_packages"
 
-
-# Configuring models
-# Full documentation: https://docs.getdbt.com/docs/configuring-models
-
-# In this example config, we tell dbt to build all models in the example/
-# directory as views. These settings can be overridden in the individual model
-# files using the `{{ config(...) }}` macro.
 models:
-  dbt_deathmetal:
-    # Config indicated by + and applies to all files under models/example/
+  dbt_deathmetal_bigquery:
     staging:
       +materialized: table
     intermediate:
       +materialized: table
     marts:
-      +materialized: view
+      core:
+        +materialized: table
+      +materialized: table
+
+vars:
+  current_year: 2024
+  environment: "cloud"
+  use_clustering: true
+  batch_size: 10000
+  dataset_location: "US"
+  job_timeout_ms: 300000
+
+tests:
+  dbt_deathmetal_bigquery:
+    +severity: error
+
+snapshots:
+  dbt_deathmetal_bigquery:
+    +target_schema: snapshots
+    +strategy: timestamp
+    +updated_at: updated_at
+
