--- a/dbt_deathmetal/requirements.txt
+++ b/dbt_deathmetal/requirements.txt
@@ -98,3 +98,16 @@ urllib3==2.4.0
 wrapt==1.17.2
 yarl==1.20.1
 zipp==3.23.0
+dbt-bigquery==1.7.4
+google-cloud-bigquery==3.13.0
+google-auth==2.23.4
+google-auth-oauthlib==1.1.0
+google-auth-httplib2==0.2.0
+
+# Enhanced data quality
+great-expectations==0.18.8
+pandas-gbq==0.19.2
+
+# Monitoring and observability
+structlog==23.2.0
+sentry-sdk==1.38.0
