--- a/requirements.txt
+++ b/requirements.txt
@@ -8,27 +8,49 @@ attrs==25.3.0
 babel==2.17.0
 boto3==1.38.27
 botocore==1.38.27
+cachetools==5.5.2
 certifi==2025.6.15
 charset-normalizer==3.4.2
 click==8.2.1
 colorama==0.4.6
 daff==1.4.2
+db-dtypes==1.4.3
 dbt-adapters==1.16.0
+dbt-bigquery==1.9.2
 dbt-common==1.25.0
 dbt-core==1.10.1
 dbt-duckdb==1.9.3
 dbt-extractor==0.6.0
 dbt-protos==1.0.330
 dbt-semantic-interfaces==0.8.3
+decorator==5.2.1
 deepdiff==7.0.1
 dlt==1.11.0
+docstring_parser==0.16
 duckdb==1.3.0
+fastjsonschema==2.21.1
 frozenlist==1.7.0
 fsspec==2025.5.1
+gcsfs==2025.5.1
 gitdb==4.0.12
 GitPython==3.1.44
 giturlparse==0.12.0
+google-api-core==2.25.1
+google-auth==2.40.3
+google-auth-oauthlib==1.2.2
+google-cloud-aiplatform==1.91.0
+google-cloud-bigquery==3.34.0
+google-cloud-core==2.4.3
+google-cloud-dataproc==5.20.0
+google-cloud-resource-manager==1.14.2
+google-cloud-storage==2.19.0
+google-crc32c==1.7.1
+google-resumable-media==2.7.2
+googleapis-common-protos==1.70.0
 greenlet==3.2.3
+grpc-google-iam-v1==0.14.2
+grpcio==1.73.0
+grpcio-status==1.71.0
 hexbytes==1.3.1
 humanize==4.12.3
 idna==3.10
@@ -39,6 +61,7 @@ jmespath==1.0.1
 jsonpath-ng==1.7.0
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
+jupyter_core==5.8.1
 leather==0.4.0
 makefun==1.16.0
 markdown-it-py==3.0.0
@@ -48,22 +71,30 @@ mdurl==0.1.2
 more-itertools==10.7.0
 msgpack==1.1.1
 multidict==6.5.0
+nbformat==5.10.4
 networkx==3.5
 numpy==2.3.0
+oauthlib==3.3.0
 ordered-set==4.1.0
 orjson==3.10.18
 packaging==25.0
 pandas==2.3.0
+pandas-gbq==0.29.1
 parsedatetime==2.6
 pathspec==0.12.1
 pathvalidate==3.3.1
 pendulum==3.1.0
+platformdirs==4.3.8
 pluggy==1.6.0
 ply==3.11
 propcache==0.3.2
+proto-plus==1.26.1
 protobuf==5.29.5
 pyarrow==17.0.0
+pyasn1==0.6.1
+pyasn1_modules==0.4.2
 pydantic==1.10.22
+pydata-google-auth==1.9.1
 Pygments==2.19.1
 PyMySQL==1.1.1
 python-dateutil==2.9.0.post0
@@ -73,14 +104,17 @@ pytz==2025.2
 PyYAML==6.0.2
 referencing==0.36.2
 requests==2.32.4
+requests-oauthlib==2.0.0
 requirements-parser==0.13.0
 rich==14.0.0
 rich-argparse==1.7.1
 rpds-py==0.25.1
+rsa==4.9.1
 s3fs==2025.5.1
 s3transfer==0.13.0
 semver==3.0.4
 setuptools==80.9.0
+shapely==2.1.1
 simplejson==3.20.1
 six==1.17.0
 smmap==5.0.2
@@ -92,6 +126,7 @@ tenacity==9.1.2
 text-unidecode==1.3
 tomlkit==0.13.3
 tqdm==4.67.1
+traitlets==5.14.3
 typing_extensions==4.14.0
 tzdata==2025.2
 urllib3==2.4.0
