--- a/requirements.txt
+++ b/requirements.txt
@@ -26,20 +26,21 @@ dbt-semantic-interfaces==0.8.3
 decorator==5.2.1
 deepdiff==7.0.1
 dlt==1.11.0
-docstring_parser==0.16
+docstring-parser==0.16
 duckdb==1.3.0
 fastjsonschema==2.21.1
 frozenlist==1.7.0
 fsspec==2025.5.1
 gcsfs==2025.5.1
 gitdb==4.0.12
-GitPython==3.1.44
+gitpython==3.1.44
 giturlparse==0.12.0
 google-api-core==2.25.1
 google-auth==2.40.3
 google-auth-oauthlib==1.2.2
 google-cloud-aiplatform==1.91.0
 google-cloud-bigquery==3.34.0
+google-cloud-bigquery-storage==2.32.0
 google-cloud-core==2.4.3
 google-cloud-dataproc==5.20.0
 google-cloud-resource-manager==1.14.2
@@ -56,16 +57,16 @@ humanize==4.12.3
 idna==3.10
 importlib-metadata==6.11.0
 isodate==0.6.1
-Jinja2==3.1.6
+jinja2==3.1.6
 jmespath==1.0.1
 jsonpath-ng==1.7.0
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
-jupyter_core==5.8.1
+jupyter-core==5.8.1
 leather==0.4.0
 makefun==1.16.0
 markdown-it-py==3.0.0
-MarkupSafe==3.0.2
+markupsafe==3.0.2
 mashumaro==3.14
 mdurl==0.1.2
 more-itertools==10.7.0
@@ -84,6 +85,7 @@ parsedatetime==2.6
 pathspec==0.12.1
 pathvalidate==3.3.1
 pendulum==3.1.0
+pip==24.0
 platformdirs==4.3.8
 pluggy==1.6.0
 ply==3.11
@@ -92,16 +94,16 @@ proto-plus==1.26.1
 protobuf==5.29.5
 pyarrow==17.0.0
 pyasn1==0.6.1
-pyasn1_modules==0.4.2
+pyasn1-modules==0.4.2
 pydantic==1.10.22
 pydata-google-auth==1.9.1
-Pygments==2.19.1
-PyMySQL==1.1.1
+pygments==2.19.1
+pymysql==1.1.1
 python-dateutil==2.9.0.post0
 python-slugify==8.0.4
 pytimeparse==1.1.8
 pytz==2025.2
-PyYAML==6.0.2
+pyyaml==6.0.2
 referencing==0.36.2
 requests==2.32.4
 requests-oauthlib==2.0.0
@@ -119,7 +121,7 @@ simplejson==3.20.1
 six==1.17.0
 smmap==5.0.2
 snowplow-tracker==1.1.0
-SQLAlchemy==2.0.41
+sqlalchemy==2.0.41
 sqlglot==26.28.1
 sqlparse==0.5.3
 tenacity==9.1.2
@@ -127,7 +129,7 @@ text-unidecode==1.3
 tomlkit==0.13.3
 tqdm==4.67.1
 traitlets==5.14.3
-typing_extensions==4.14.0
+typing-extensions==4.14.0
 tzdata==2025.2
 urllib3==2.4.0
 wrapt==1.17.2
