--- a/requirements.txt
+++ b/requirements.txt
@@ -4,30 +4,45 @@ aiohappyeyeballs==2.6.1
 aiohttp==3.12.13
 aioitertools==0.12.0
 aiosignal==1.3.2
+aiosqlite==0.21.0
+alembic==1.16.2
+annotated-types==0.7.0
+anyio==4.9.0
+apprise==1.9.3
+asgi-lifespan==2.1.0
+asyncpg==0.30.0
 attrs==25.3.0
 babel==2.17.0
 boto3==1.38.27
 botocore==1.38.27
-cachetools==5.5.2
+cachetools==6.1.0
 certifi==2025.6.15
+cffi==1.17.1
 charset-normalizer==3.4.2
-click==8.2.1
+click==8.1.8
+cloudpickle==3.1.1
 colorama==0.4.6
+coolname==2.2.0
+cryptography==45.0.4
 daff==1.4.2
+dateparser==1.2.1
 db-dtypes==1.4.3
 dbt-adapters==1.16.0
 dbt-bigquery==1.9.2
 dbt-common==1.25.0
-dbt-core==1.10.1
+dbt-core==1.10.0b1
 dbt-duckdb==1.9.3
 dbt-extractor==0.6.0
 dbt-protos==1.0.330
-dbt-semantic-interfaces==0.8.3
+dbt-semantic-interfaces==0.8.4
 decorator==5.2.1
 deepdiff==7.0.1
 dlt==1.11.0
+docker==7.1.0
 docstring-parser==0.16
 duckdb==1.3.0
+exceptiongroup==1.3.0
+fastapi==0.115.13
 fastjsonschema==2.21.1
 frozenlist==1.7.0
 fsspec==2025.5.1
@@ -36,7 +51,9 @@ gitdb==4.0.12
 gitpython==3.1.44
 giturlparse==0.12.0
 google-api-core==2.25.1
+google-api-python-client==2.173.0
 google-auth==2.40.3
+google-auth-httplib2==0.2.0
 google-auth-oauthlib==1.2.2
 google-cloud-aiplatform==1.91.0
 google-cloud-bigquery==3.34.0
@@ -44,27 +61,43 @@ google-cloud-bigquery-storage==2.32.0
 google-cloud-core==2.4.3
 google-cloud-dataproc==5.20.0
 google-cloud-resource-manager==1.14.2
+google-cloud-secret-manager==2.24.0
 google-cloud-storage==2.19.0
 google-crc32c==1.7.1
 google-resumable-media==2.7.2
 googleapis-common-protos==1.70.0
+graphql-core==3.3.0a9
+graphviz==0.21
 greenlet==3.2.3
+griffe==1.7.3
 grpc-google-iam-v1==0.14.2
 grpcio==1.73.0
 grpcio-status==1.71.0
+h11==0.16.0
+h2==4.2.0
 hexbytes==1.3.1
+hpack==4.1.0
+httpcore==1.0.9
+httplib2==0.22.0
+httpx==0.28.1
 humanize==4.12.3
+hyperframe==6.1.0
 idna==3.10
-importlib-metadata==6.11.0
+importlib-metadata==8.7.0
 isodate==0.6.1
 jinja2==3.1.6
+jinja2-humanize-extension==0.4.0
 jmespath==1.0.1
+jsonpatch==1.33
 jsonpath-ng==1.7.0
+jsonpointer==3.0.0
 jsonschema==4.24.0
 jsonschema-specifications==2025.4.1
 jupyter-core==5.8.1
 leather==0.4.0
 makefun==1.16.0
+mako==1.3.10
+markdown==3.8.2
 markdown-it-py==3.0.0
 markupsafe==3.0.2
 mashumaro==3.14
@@ -76,6 +109,7 @@ nbformat==5.10.4
 networkx==3.5
 numpy==2.3.0
 oauthlib==3.3.0
+opentelemetry-api==1.34.1
 ordered-set==4.1.0
 orjson==3.10.18
 packaging==25.0
@@ -89,49 +123,79 @@ pip==24.0
 platformdirs==4.3.8
 pluggy==1.6.0
 ply==3.11
+prefect==3.4.7.dev5
+prefect-dbt==0.7.0rc1
+prefect-gcp==0.6.8
+prefect-shell==0.3.1
+prometheus-client==0.22.1
 propcache==0.3.2
 proto-plus==1.26.1
 protobuf==5.29.5
 pyarrow==17.0.0
 pyasn1==0.6.1
 pyasn1-modules==0.4.2
-pydantic==1.10.22
+pycparser==2.22
+pydantic==2.11.7
+pydantic-core==2.33.2
+pydantic-extra-types==2.10.5
+pydantic-settings==2.9.1
 pydata-google-auth==1.9.1
 pygments==2.19.1
 pymysql==1.1.1
+pyparsing==3.2.3
 python-dateutil==2.9.0.post0
+python-dotenv==1.1.0
 python-slugify==8.0.4
+python-socks==2.7.1
 pytimeparse==1.1.8
 pytz==2025.2
 pyyaml==6.0.2
+readchar==4.2.1
 referencing==0.36.2
+regex==2024.11.6
 requests==2.32.4
 requests-oauthlib==2.0.0
 requirements-parser==0.13.0
+rfc3339-validator==0.1.4
 rich==14.0.0
 rich-argparse==1.7.1
 rpds-py==0.25.1
 rsa==4.9.1
+ruamel-yaml==0.18.14
+ruamel-yaml-clib==0.2.12
 s3fs==2025.5.1
 s3transfer==0.13.0
 semver==3.0.4
 setuptools==80.9.0
+sgqlc==16.5
 shapely==2.1.1
+shellingham==1.5.4
 simplejson==3.20.1
 six==1.17.0
 smmap==5.0.2
+sniffio==1.3.1
 snowplow-tracker==1.1.0
 sqlalchemy==2.0.41
 sqlglot==26.28.1
 sqlparse==0.5.3
+starlette==0.46.2
 tenacity==9.1.2
 text-unidecode==1.3
+toml==0.10.2
 tomlkit==0.13.3
 tqdm==4.67.1
 traitlets==5.14.3
+typer==0.16.0
 typing-extensions==4.14.0
+typing-inspection==0.4.1
 tzdata==2025.2
-urllib3==2.4.0
+tzlocal==5.3.1
+ujson==5.10.0
+uritemplate==4.2.0
+urllib3==2.5.0
+uv==0.7.13
+uvicorn==0.34.3
+websockets==15.0.1
 wrapt==1.17.2
 yarl==1.20.1
 zipp==3.23.0
