feat(06): update how read from gcs

--- a/.dlt/secrets_bigquery.toml
+++ b/.dlt/secrets_bigquery.toml
@@ -1,5 +1,5 @@
 [destination.bigquery.credentials]
-location = "/home/user/.config/gcloud/dw-bigquery-462900-a4b8c80ac45d.json"
+location = "path/your-key-gcs.json"
 
 [sources.filesystem.credentials]
-location = "/home/user/.config/gcloud/dw-bigquery-462900-a4b8c80ac45d.json"
+location = "path/your-key-gcs.json"
